--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,29 @@ body {
 }
 
 /* line 463, ../../scss/style.scss */
+.icon-close {
+  position: absolute;
+  top: 46px;
+  right: 30px;
+  display: none;
+  width: 36px;
+  height: 36px;
+  border-radius: 18px;
+  background-color: rgba(89, 120, 255, 0.17);
+  cursor: pointer;
+  margin-left: auto;
+}
+/* line 474, ../../scss/style.scss */
+.icon-close:after {
+  content: ' ';
+  display: block;
+  height: 36px;
+  width: 36px;
+  background: url("../images/icon-close.png") no-repeat;
+  background-position: center;
+}
+
+/* line 483, ../../scss/style.scss */
 .menu-mb {
   display: block !important;
   width: 240px;
@@ -586,7 +609,7 @@ body {
 }
 
 @media all and (min-width: 320px) and (max-width: 1170px) {
-  /* line 475, ../../scss/style.scss */
+  /* line 495, ../../scss/style.scss */
   .icon-show-menu {
     display: block;
     width: 36px;
@@ -596,7 +619,7 @@ body {
     background-color: rgba(89, 120, 255, 0.17);
     cursor: pointer;
   }
-  /* line 483, ../../scss/style.scss */
+  /* line 503, ../../scss/style.scss */
   .icon-show-menu:before {
     content: '';
     display: block;
@@ -607,48 +630,72 @@ body {
     background-position: center;
   }
 
-  /* line 493, ../../scss/style.scss */
+  /* line 513, ../../scss/style.scss */
   .next {
     display: none;
   }
 
-  /* line 496, ../../scss/style.scss */
+  /* line 516, ../../scss/style.scss */
   .prev {
     display: none;
   }
 
-  /* line 499, ../../scss/style.scss */
+  /* line 519, ../../scss/style.scss */
   .nav-toolbar-container {
     display: none;
   }
 
-  /* line 502, ../../scss/style.scss */
+  /* line 522, ../../scss/style.scss */
   .nav-menu {
     padding-top: 107px;
+    padding-left: 30px;
   }
 
-  /* line 505, ../../scss/style.scss */
+  /* line 526, ../../scss/style.scss */
   .nav-item {
     display: block;
     list-style: none;
   }
 
-  /* line 509, ../../scss/style.scss */
+  /* line 530, ../../scss/style.scss */
   .lang {
+    padding-left: 30px;
     width: 100%;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
+    border-bottom: 2px solid #ebeef0;
+    padding-bottom: 108px;
   }
 
-  /* line 513, ../../scss/style.scss */
-  .head-toolbar {
-    border-top: 2px solid #ebeef0;
-    padding-top: 30px;
-  }
-
-  /* line 517, ../../scss/style.scss */
+  /* line 538, ../../scss/style.scss */
   .nav-toolbar {
     display: block;
     margin: 0 auto;
     width: 196px;
+  }
+
+  /* line 543, ../../scss/style.scss */
+  .header-toolbar-group {
+    margin: 33px 25px;
+    width: 190px;
+    text-align: center;
+  }
+
+  /* line 548, ../../scss/style.scss */
+  .active {
+    top: 26px;
+    left: 60px;
+    width: 50%;
+  }
+
+  /* line 553, ../../scss/style.scss */
+  .getStartedblock {
+    margin: 0 25px;
+    width: 190px;
+    text-align: center;
+  }
+
+  /* line 558, ../../scss/style.scss */
+  .icon-close {
+    display: block;
   }
 }
