--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,13 @@ body {
   margin: 0px 15px;
   text-transform: uppercase;
 }
-/* line 52, ../../scss/style.scss */
-.nav-item:after {
+/* line 53, ../../scss/style.scss */
+.nav-item a {
+  color: #384656;
+}
+
+/* line 64, ../../scss/style.scss */
+.nav-lang:after {
   content: '';
   position: absolute;
   width: 0;
@@ -90,17 +95,13 @@ body {
   right: -10px;
   top: 14px;
 }
-/* line 66, ../../scss/style.scss */
-.nav-item a {
-  color: #384656;
-}
 
-/* line 76, ../../scss/style.scss */
+/* line 78, ../../scss/style.scss */
 .lang {
   position: relative;
   float: left;
 }
-/* line 79, ../../scss/style.scss */
+/* line 81, ../../scss/style.scss */
 .lang a {
   position: relative;
   display: inline-block;
@@ -112,14 +113,14 @@ body {
   letter-spacing: 2px;
 }
 
-/* line 91, ../../scss/style.scss */
+/* line 93, ../../scss/style.scss */
 .lang-list {
   list-style: none;
   width: 100%;
   display: none;
   position: absolute;
   top: 100%;
-  left: 0px;
+  left: 24px;
   background-color: #fff;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
   transition-delay: 0s, 0.2s;
@@ -127,29 +128,30 @@ body {
   transition-duration: 0.2s, 0s;
   z-index: 999;
 }
-/* line 104, ../../scss/style.scss */
+/* line 106, ../../scss/style.scss */
 .lang-list:after {
   display: block;
   content: '';
 }
 
-/* line 109, ../../scss/style.scss */
+/* line 111, ../../scss/style.scss */
 .active {
   display: block;
+  width: 60px;
 }
 
-/* line 112, ../../scss/style.scss */
+/* line 115, ../../scss/style.scss */
 .head-toolbar {
   position: relative;
   float: right;
 }
 
-/* line 116, ../../scss/style.scss */
+/* line 119, ../../scss/style.scss */
 .toolbar-icon {
   margin-left: 20px;
   display: inline-block;
 }
-/* line 119, ../../scss/style.scss */
+/* line 122, ../../scss/style.scss */
 .toolbar-icon a {
   display: block;
   width: 37px;
@@ -160,12 +162,12 @@ body {
   line-height: 2.8;
 }
 
-/* line 129, ../../scss/style.scss */
+/* line 132, ../../scss/style.scss */
 .nav-toolbar {
   display: inline-block;
 }
 
-/* line 132, ../../scss/style.scss */
+/* line 135, ../../scss/style.scss */
 .header-toolbar-group {
   margin-left: 20px;
   display: inline-block;
@@ -176,7 +178,7 @@ body {
   border-radius: 25px;
 }
 
-/* line 142, ../../scss/style.scss */
+/* line 145, ../../scss/style.scss */
 .getStartedblock {
   margin-left: 20px;
   font-size: 13px;
@@ -187,12 +189,12 @@ body {
   float: right;
 }
 
-/* line 151, ../../scss/style.scss */
+/* line 154, ../../scss/style.scss */
 .main-slider-container {
   margin-top: 100px;
 }
 
-/* line 154, ../../scss/style.scss */
+/* line 157, ../../scss/style.scss */
 #slider-container {
   position: relative;
   background: #ffffff;
@@ -202,32 +204,32 @@ body {
   overflow: hidden;
 }
 
-/* line 162, ../../scss/style.scss */
+/* line 165, ../../scss/style.scss */
 .slides {
   height: 100%;
   position: relative;
 }
-/* line 166, ../../scss/style.scss */
+/* line 169, ../../scss/style.scss */
 .slides li {
   background-color: #ecf0f1;
   display: table;
   float: left;
   height: 100%;
 }
-/* line 172, ../../scss/style.scss */
+/* line 175, ../../scss/style.scss */
 .slides li div {
   display: table-cell;
   text-align: center;
   font-size: 3em;
 }
 
-/* line 180, ../../scss/style.scss */
+/* line 183, ../../scss/style.scss */
 .buttons {
   position: absolute;
   top: 100px;
   left: 65px;
 }
-/* line 184, ../../scss/style.scss */
+/* line 187, ../../scss/style.scss */
 .buttons li {
   margin-bottom: 105px;
   color: #fff;
@@ -237,7 +239,7 @@ body {
   list-style-type: none;
 }
 
-/* line 194, ../../scss/style.scss */
+/* line 197, ../../scss/style.scss */
 .getStartedContainer {
   position: absolute;
   top: 447px;
@@ -250,18 +252,18 @@ body {
   font-size: 18px;
 }
 
-/* line 205, ../../scss/style.scss */
+/* line 208, ../../scss/style.scss */
 .slides li.solid-bg {
   background-color: #999999;
 }
 
-/* line 208, ../../scss/style.scss */
+/* line 211, ../../scss/style.scss */
 .solid-bg {
   padding-left: 170px;
   padding-top: 80px;
   background: linear-gradient(45deg, #8c5ef2 0%, #8c5ef2 22%, #f2a8c6 40%, #f2a8c6 42%, #f2a8c6 45%, #f2a8c6 47%, #9497f5 48%, #9497f5 100%);
 }
-/* line 212, ../../scss/style.scss */
+/* line 215, ../../scss/style.scss */
 .solid-bg h6 {
   width: 50%;
   text-align: left;
@@ -270,7 +272,7 @@ body {
   font-weight: 100;
   color: #fff;
 }
-/* line 220, ../../scss/style.scss */
+/* line 223, ../../scss/style.scss */
 .solid-bg p {
   width: 50%;
   text-align: left;
@@ -280,36 +282,36 @@ body {
   color: #fff;
 }
 
-/* line 229, ../../scss/style.scss */
+/* line 232, ../../scss/style.scss */
 .develop-section {
   margin: 150px 0;
 }
-/* line 231, ../../scss/style.scss */
+/* line 234, ../../scss/style.scss */
 .develop-section .cards-circles-items {
   padding-top: 85px;
   overflow: hidden;
 }
-/* line 235, ../../scss/style.scss */
+/* line 238, ../../scss/style.scss */
 .develop-section .container {
   padding: 0 15px;
 }
-/* line 238, ../../scss/style.scss */
+/* line 241, ../../scss/style.scss */
 .develop-section .row {
   margin-left: 30px;
   margin-right: 30px;
 }
-/* line 242, ../../scss/style.scss */
+/* line 245, ../../scss/style.scss */
 .develop-section .section-second-title {
   font-size: 20px;
   font-family: "Merriweather", serif;
   line-height: 1.5;
   color: #97a3b4;
 }
-/* line 248, ../../scss/style.scss */
+/* line 251, ../../scss/style.scss */
 .develop-section .col-xs-12 {
   width: 100%;
 }
-/* line 251, ../../scss/style.scss */
+/* line 254, ../../scss/style.scss */
 .develop-section .card-item {
   float: left;
   text-align: center;
@@ -321,7 +323,7 @@ body {
   transition-duration: 300ms;
   transition-timing-function: ease-out;
 }
-/* line 261, ../../scss/style.scss */
+/* line 264, ../../scss/style.scss */
 .develop-section .card-item:hover {
   background: url(../images/circle-overlay.png) no-repeat;
   transform: translateY(-40px);
@@ -329,7 +331,7 @@ body {
   transition-duration: 300ms;
   transition-timing-function: ease-out;
 }
-/* line 268, ../../scss/style.scss */
+/* line 271, ../../scss/style.scss */
 .develop-section .card-item .card-link {
   font-family: "Merriweather", serif;
   height: 100%;
@@ -338,76 +340,76 @@ body {
   text-align: center;
   color: #fff;
 }
-/* line 276, ../../scss/style.scss */
+/* line 279, ../../scss/style.scss */
 .develop-section .card-item .circle-inner-content {
   padding-top: 43%;
 }
-/* line 280, ../../scss/style.scss */
+/* line 283, ../../scss/style.scss */
 .develop-section .card-item1 {
   display: block;
   background: url(../images/circle-1.png) no-repeat;
 }
-/* line 284, ../../scss/style.scss */
+/* line 287, ../../scss/style.scss */
 .develop-section .card-item2 {
   margin-top: 30px;
   display: block;
   background: url(../images/circle-1.png) no-repeat;
 }
-/* line 289, ../../scss/style.scss */
+/* line 292, ../../scss/style.scss */
 .develop-section .card-item3 {
   margin-top: 60px;
   display: block;
   background: url(../images/circle-4.png) no-repeat;
 }
-/* line 294, ../../scss/style.scss */
+/* line 297, ../../scss/style.scss */
 .develop-section .card-item4 {
   margin-top: 80px;
   display: block;
   background: url(../images/circle-4.png) no-repeat;
 }
 
-/* line 300, ../../scss/style.scss */
+/* line 303, ../../scss/style.scss */
 .section-title {
   font-size: 48px;
   font-weight: 100;
   color: #384656;
 }
 
-/* line 305, ../../scss/style.scss */
+/* line 308, ../../scss/style.scss */
 .business-section {
   background: #f0f3f5;
   padding-bottom: 140px;
 }
 
-/* line 309, ../../scss/style.scss */
+/* line 312, ../../scss/style.scss */
 .business-header {
   margin-top: 120px;
   margin-bottom: 55px;
   max-width: 400px;
 }
 
-/* line 314, ../../scss/style.scss */
+/* line 317, ../../scss/style.scss */
 .col-lg-7.col-md-12.no-mrg {
   padding-left: 0px;
 }
 
-/* line 317, ../../scss/style.scss */
+/* line 320, ../../scss/style.scss */
 .business-list {
   margin-bottom: 20px;
 }
-/* line 319, ../../scss/style.scss */
+/* line 322, ../../scss/style.scss */
 .business-list ul {
   overflow: hidden;
   list-style: none;
 }
-/* line 323, ../../scss/style.scss */
+/* line 326, ../../scss/style.scss */
 .business-list li {
   display: inline-block;
   width: 40%;
   float: left;
 }
 
-/* line 329, ../../scss/style.scss */
+/* line 332, ../../scss/style.scss */
 .business-list-items {
   display: block;
   padding: 20px 0 30px 0;
@@ -418,12 +420,12 @@ body {
   line-height: 1.3;
 }
 
-/* line 338, ../../scss/style.scss */
+/* line 341, ../../scss/style.scss */
 .mrg-rght {
   margin-right: 90px;
 }
 
-/* line 341, ../../scss/style.scss */
+/* line 344, ../../scss/style.scss */
 .btn-primary {
   width: 170px;
   padding: 12px 24px 11px;
@@ -436,25 +438,25 @@ body {
   vertical-align: sub;
 }
 
-/* line 352, ../../scss/style.scss */
+/* line 355, ../../scss/style.scss */
 .col-xs-offset-1 {
   margin-left: 8.33%;
 }
 
-/* line 355, ../../scss/style.scss */
+/* line 358, ../../scss/style.scss */
 .col-xs-4 {
   width: 33.33%;
   float: left;
 }
 
-/* line 359, ../../scss/style.scss */
+/* line 362, ../../scss/style.scss */
 .business-cards {
   position: absolute;
   top: -165px;
   height: 660px;
   width: 330px;
 }
-/* line 364, ../../scss/style.scss */
+/* line 367, ../../scss/style.scss */
 .business-cards .business-card-item {
   position: absolute;
   top: 0;
@@ -467,7 +469,7 @@ body {
   transition-duration: 300ms;
   transition-timing-function: ease-out;
 }
-/* line 375, ../../scss/style.scss */
+/* line 378, ../../scss/style.scss */
 .business-cards .business-card-item p {
   font-size: 45px;
   color: #adf5fa;
@@ -476,57 +478,57 @@ body {
   right: 180px;
   transform: rotate(-45deg);
 }
-/* line 384, ../../scss/style.scss */
+/* line 387, ../../scss/style.scss */
 .business-cards .card-item-1 {
   z-index: 10;
 }
-/* line 387, ../../scss/style.scss */
+/* line 390, ../../scss/style.scss */
 .business-cards .card-item-2 {
   top: 50px;
   z-index: 9;
 }
-/* line 391, ../../scss/style.scss */
+/* line 394, ../../scss/style.scss */
 .business-cards .card-item-3 {
   top: 100px;
   z-index: 8;
 }
-/* line 395, ../../scss/style.scss */
+/* line 398, ../../scss/style.scss */
 .business-cards .card-item-4 {
   top: 150px;
   z-index: 7;
 }
-/* line 399, ../../scss/style.scss */
+/* line 402, ../../scss/style.scss */
 .business-cards .card-item-5 {
   top: 200px;
   z-index: 6;
 }
-/* line 403, ../../scss/style.scss */
+/* line 406, ../../scss/style.scss */
 .business-cards .card-item-6 {
   top: 250px;
   z-index: 5;
 }
-/* line 407, ../../scss/style.scss */
+/* line 410, ../../scss/style.scss */
 .business-cards .card-item-7 {
   top: 300px;
   z-index: 4;
 }
-/* line 411, ../../scss/style.scss */
+/* line 414, ../../scss/style.scss */
 .business-cards .card-item-8 {
   top: 330px;
   z-index: 3;
 }
-/* line 415, ../../scss/style.scss */
+/* line 418, ../../scss/style.scss */
 .business-cards img {
   vertical-align: middle;
 }
 
-/* line 419, ../../scss/style.scss */
+/* line 422, ../../scss/style.scss */
 .mrgn-top {
   transform: translateY(-75px) !important;
   opacity: .2 !important;
 }
 
-/* line 424, ../../scss/style.scss */
+/* line 427, ../../scss/style.scss */
 .nav-header-fixed {
   position: fixed;
   right: 0;
@@ -538,7 +540,7 @@ body {
   border-bottom: 1px solid #ccc;
 }
 
-/* line 434, ../../scss/style.scss */
+/* line 437, ../../scss/style.scss */
 .next {
   display: inline-block;
   font: normal normal normal 20px/1 FontAwesome;
@@ -547,7 +549,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/* line 441, ../../scss/style.scss */
+/* line 444, ../../scss/style.scss */
 .next:after {
   content: "\f054";
   display: block;
@@ -555,7 +557,7 @@ body {
   color: #fff;
 }
 
-/* line 448, ../../scss/style.scss */
+/* line 451, ../../scss/style.scss */
 .prev {
   display: inline-block;
   font: normal normal normal 20px/1 FontAwesome;
@@ -564,7 +566,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-/* line 455, ../../scss/style.scss */
+/* line 458, ../../scss/style.scss */
 .prev:after {
   content: "\f054";
   display: block;
@@ -573,7 +575,7 @@ body {
   color: #fff;
 }
 
-/* line 463, ../../scss/style.scss */
+/* line 466, ../../scss/style.scss */
 .icon-close {
   position: absolute;
   top: 46px;
@@ -586,7 +588,7 @@ body {
   cursor: pointer;
   margin-left: auto;
 }
-/* line 474, ../../scss/style.scss */
+/* line 477, ../../scss/style.scss */
 .icon-close:after {
   content: ' ';
   display: block;
@@ -596,7 +598,7 @@ body {
   background-position: center;
 }
 
-/* line 483, ../../scss/style.scss */
+/* line 486, ../../scss/style.scss */
 .menu-mb {
   display: block !important;
   width: 240px;
@@ -609,7 +611,7 @@ body {
 }
 
 @media all and (min-width: 320px) and (max-width: 1170px) {
-  /* line 495, ../../scss/style.scss */
+  /* line 498, ../../scss/style.scss */
   .icon-show-menu {
     display: block;
     width: 36px;
@@ -619,7 +621,7 @@ body {
     background-color: rgba(89, 120, 255, 0.17);
     cursor: pointer;
   }
-  /* line 503, ../../scss/style.scss */
+  /* line 506, ../../scss/style.scss */
   .icon-show-menu:before {
     content: '';
     display: block;
@@ -630,34 +632,40 @@ body {
     background-position: center;
   }
 
-  /* line 513, ../../scss/style.scss */
+  /* line 516, ../../scss/style.scss */
   .next {
     display: none;
   }
 
-  /* line 516, ../../scss/style.scss */
+  /* line 519, ../../scss/style.scss */
   .prev {
     display: none;
   }
 
-  /* line 519, ../../scss/style.scss */
+  /* line 522, ../../scss/style.scss */
   .nav-toolbar-container {
     display: none;
   }
 
-  /* line 522, ../../scss/style.scss */
+  /* line 525, ../../scss/style.scss */
   .nav-menu {
     padding-top: 107px;
     padding-left: 30px;
   }
 
-  /* line 526, ../../scss/style.scss */
+  /* line 529, ../../scss/style.scss */
+  .nav-lang {
+    display: block;
+    list-style: none;
+  }
+
+  /* line 533, ../../scss/style.scss */
   .nav-item {
     display: block;
     list-style: none;
   }
 
-  /* line 530, ../../scss/style.scss */
+  /* line 537, ../../scss/style.scss */
   .lang {
     padding-left: 30px;
     width: 100%;
@@ -666,35 +674,34 @@ body {
     padding-bottom: 108px;
   }
 
-  /* line 538, ../../scss/style.scss */
+  /* line 545, ../../scss/style.scss */
   .nav-toolbar {
     display: block;
     margin: 0 auto;
     width: 196px;
   }
 
-  /* line 543, ../../scss/style.scss */
+  /* line 550, ../../scss/style.scss */
   .header-toolbar-group {
     margin: 33px 25px;
     width: 190px;
     text-align: center;
   }
 
-  /* line 548, ../../scss/style.scss */
+  /* line 555, ../../scss/style.scss */
   .active {
     top: 26px;
     left: 60px;
-    width: 50%;
   }
 
-  /* line 553, ../../scss/style.scss */
+  /* line 559, ../../scss/style.scss */
   .getStartedblock {
     margin: 0 25px;
     width: 190px;
     text-align: center;
   }
 
-  /* line 558, ../../scss/style.scss */
+  /* line 564, ../../scss/style.scss */
   .icon-close {
     display: block;
   }
